Removed deprecated instantiations